--- a/Tenso MessagesExtension/Base.lproj/MainInterface.storyboard
+++ b/Tenso MessagesExtension/Base.lproj/MainInterface.storyboard
@@ -19,7 +19,7 @@
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <containerView opaque="NO" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="eAe-oc-qCe">
-                                <rect key="frame" x="0.0" y="20" width="320" height="518"/>
+                                <rect key="frame" x="0.0" y="20" width="320" height="508"/>
                                 <connections>
                                     <segue destination="klY-F0-Cye" kind="embed" id="nxM-5K-u0U"/>
                                 </connections>
@@ -29,7 +29,7 @@
                         <constraints>
                             <constraint firstItem="eAe-oc-qCe" firstAttribute="top" secondItem="LDy-ih-0nr" secondAttribute="top" id="1nC-bh-EWY"/>
                             <constraint firstItem="eAe-oc-qCe" firstAttribute="leading" secondItem="LDy-ih-0nr" secondAttribute="leading" id="52A-4l-fPZ"/>
-                            <constraint firstAttribute="bottomMargin" secondItem="eAe-oc-qCe" secondAttribute="bottom" constant="-10" id="ecg-0J-Kvq"/>
+                            <constraint firstAttribute="bottomMargin" secondItem="eAe-oc-qCe" secondAttribute="bottom" id="ecg-0J-Kvq"/>
                             <constraint firstAttribute="trailing" secondItem="eAe-oc-qCe" secondAttribute="trailing" id="iul-rp-Ghr"/>
                         </constraints>
                         <viewLayoutGuide key="safeArea" id="LDy-ih-0nr"/>
@@ -39,14 +39,14 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="X47-rx-isc" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="120" y="105.24737631184409"/>
+            <point key="canvasLocation" x="-302.39999999999998" y="102.54872563718142"/>
         </scene>
         <!--Recent Photos View Controller-->
         <scene sceneID="NTW-dT-4WX">
             <objects>
                 <collectionViewController id="klY-F0-Cye" customClass="RecentPhotosViewController" customModule="Tenso_MessagesExtension" customModuleProvider="target" sceneMemberID="viewController">
                     <collectionView key="view" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" showsVerticalScrollIndicator="NO" dataMode="prototypes" id="5bK-Ac-5Lj">
-                        <rect key="frame" x="0.0" y="0.0" width="320" height="518"/>
+                        <rect key="frame" x="0.0" y="0.0" width="320" height="508"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                         <collectionViewFlowLayout key="collectionViewLayout" minimumLineSpacing="0.0" minimumInteritemSpacing="0.0" id="MLa-qK-Dqp">
@@ -63,7 +63,7 @@
                                     <rect key="frame" x="0.0" y="0.0" width="80" height="80"/>
                                     <autoresizingMask key="autoresizingMask"/>
                                     <subviews>
-                                        <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" misplaced="YES" translatesAutoresizingMaskIntoConstraints="NO" id="Hj1-rK-CDg">
+                                        <imageView userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" misplaced="YES" translatesAutoresizingMaskIntoConstraints="NO" id="Hj1-rK-CDg">
                                             <rect key="frame" x="0.0" y="0.0" width="80" height="80"/>
                                         </imageView>
                                     </subviews>
@@ -84,10 +84,63 @@
                             <outlet property="delegate" destination="klY-F0-Cye" id="wzA-rp-DLA"/>
                         </connections>
                     </collectionView>
+                    <connections>
+                        <segue destination="RmC-vg-acE" kind="show" identifier="ShowTensoModeController" id="w2d-EB-VBU"/>
+                    </connections>
                 </collectionViewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="6bZ-K4-XxE" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="890" y="116"/>
+            <point key="canvasLocation" x="539" y="60"/>
+        </scene>
+        <!--Item 2-->
+        <scene sceneID="RBK-oU-JXw">
+            <objects>
+                <viewController id="Z6V-TW-xhG" sceneMemberID="viewController">
+                    <view key="view" contentMode="scaleToFill" id="Dv2-4a-C8Z">
+                        <rect key="frame" x="0.0" y="0.0" width="320" height="508"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                        <viewLayoutGuide key="safeArea" id="aaX-RJ-IyO"/>
+                    </view>
+                    <tabBarItem key="tabBarItem" title="Item 2" id="Xw7-p2-lhl"/>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="3yj-2g-o0h" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="3585" y="1188"/>
+        </scene>
+        <!--AUTO-->
+        <scene sceneID="lpv-kQ-UJ3">
+            <objects>
+                <viewController id="RXp-TD-UK3" sceneMemberID="viewController">
+                    <view key="view" contentMode="scaleToFill" id="SI4-w9-TI0">
+                        <rect key="frame" x="0.0" y="0.0" width="320" height="508"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                        <viewLayoutGuide key="safeArea" id="09C-tB-3aU"/>
+                    </view>
+                    <tabBarItem key="tabBarItem" title="AUTO" id="n7S-fd-ZU9"/>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="t3Q-Va-0W1" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="3585" y="-426"/>
+        </scene>
+        <!--Tenso Mode View Controller-->
+        <scene sceneID="tVh-nC-lOb">
+            <objects>
+                <tabBarController id="RmC-vg-acE" customClass="TensoModeViewController" customModule="Tenso_MessagesExtension" customModuleProvider="target" sceneMemberID="viewController">
+                    <tabBar key="tabBar" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" id="YGd-Q0-4FA">
+                        <rect key="frame" x="0.0" y="0.0" width="375" height="49"/>
+                        <autoresizingMask key="autoresizingMask"/>
+                        <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                    </tabBar>
+                    <connections>
+                        <segue destination="RXp-TD-UK3" kind="relationship" relationship="viewControllers" id="mkA-sw-kVm"/>
+                        <segue destination="Z6V-TW-xhG" kind="relationship" relationship="viewControllers" id="hVb-Nl-ZwF"/>
+                    </connections>
+                </tabBarController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="iY0-Lb-hHK" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="1290" y="127"/>
         </scene>
     </scenes>
 </document>
