--- a/Tenso MessagesExtension/Base.lproj/MainInterface.storyboard
+++ b/Tenso MessagesExtension/Base.lproj/MainInterface.storyboard
@@ -46,9 +46,9 @@
             <objects>
                 <collectionViewController id="klY-F0-Cye" customClass="RecentPhotosViewController" customModule="Tenso_MessagesExtension" customModuleProvider="target" sceneMemberID="viewController">
                     <collectionView key="view" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" showsVerticalScrollIndicator="NO" dataMode="prototypes" id="5bK-Ac-5Lj">
-                        <rect key="frame" x="0.0" y="0.0" width="320" height="508"/>
+                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
-                        <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                        <color key="backgroundColor" white="0.10428088639051683" alpha="1" colorSpace="calibratedWhite"/>
                         <collectionViewFlowLayout key="collectionViewLayout" minimumLineSpacing="0.0" minimumInteritemSpacing="0.0" id="MLa-qK-Dqp">
                             <size key="itemSize" width="80" height="80"/>
                             <size key="headerReferenceSize" width="0.0" height="0.0"/>
@@ -92,55 +92,101 @@
             </objects>
             <point key="canvasLocation" x="539" y="60"/>
         </scene>
-        <!--Item 2-->
+        <!--FaceTenso-->
         <scene sceneID="RBK-oU-JXw">
             <objects>
-                <viewController id="Z6V-TW-xhG" sceneMemberID="viewController">
+                <viewController id="Z6V-TW-xhG" userLabel="FaceTenso" customClass="FacesModeViewController" customModule="Tenso_MessagesExtension" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="Dv2-4a-C8Z">
-                        <rect key="frame" x="0.0" y="0.0" width="320" height="508"/>
+                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Coming soon..." textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="sjU-YT-ics">
+                                <rect key="frame" x="130" y="308.5" width="115" height="21"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                <nil key="textColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                        </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                        <constraints>
+                            <constraint firstItem="sjU-YT-ics" firstAttribute="centerY" secondItem="aaX-RJ-IyO" secondAttribute="centerY" id="0yi-UC-H6e"/>
+                            <constraint firstItem="sjU-YT-ics" firstAttribute="centerX" secondItem="aaX-RJ-IyO" secondAttribute="centerX" id="sXV-HP-qVL"/>
+                        </constraints>
                         <viewLayoutGuide key="safeArea" id="aaX-RJ-IyO"/>
                     </view>
-                    <tabBarItem key="tabBarItem" title="Item 2" id="Xw7-p2-lhl"/>
+                    <tabBarItem key="tabBarItem" title="FACES" image="FacesNormal" badgeValue="2" id="Xw7-p2-lhl"/>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="3yj-2g-o0h" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="3585" y="1188"/>
+            <point key="canvasLocation" x="4179" y="-426"/>
         </scene>
-        <!--AUTO-->
+        <!--AutoTenso-->
         <scene sceneID="lpv-kQ-UJ3">
             <objects>
-                <viewController id="RXp-TD-UK3" sceneMemberID="viewController">
+                <viewController id="RXp-TD-UK3" userLabel="AutoTenso" customClass="AutoModeViewController" customModule="Tenso_MessagesExtension" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="SI4-w9-TI0">
-                        <rect key="frame" x="0.0" y="0.0" width="320" height="508"/>
+                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" distribution="fillEqually" translatesAutoresizingMaskIntoConstraints="NO" id="PcU-Kf-5U0">
+                                <rect key="frame" x="50" y="50" width="275" height="518"/>
+                                <subviews>
+                                    <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="oKg-Y2-QzJ">
+                                        <rect key="frame" x="0.0" y="0.0" width="275" height="172.5"/>
+                                        <color key="backgroundColor" red="0.42745100000000003" green="0.78823500000000002" blue="0.82352899999999996" alpha="1" colorSpace="calibratedRGB"/>
+                                    </imageView>
+                                    <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="pWL-Ve-mS7">
+                                        <rect key="frame" x="0.0" y="172.5" width="275" height="173"/>
+                                        <color key="backgroundColor" red="0.18823529410000001" green="0.70980392160000005" blue="0.41176470590000003" alpha="1" colorSpace="calibratedRGB"/>
+                                    </imageView>
+                                    <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="mdD-AW-CPA">
+                                        <rect key="frame" x="0.0" y="345.5" width="275" height="172.5"/>
+                                        <color key="backgroundColor" red="0.98823529409999999" green="0.36078431370000003" blue="0.0039215686269999999" alpha="1" colorSpace="calibratedRGB"/>
+                                    </imageView>
+                                </subviews>
+                            </stackView>
+                        </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                        <constraints>
+                            <constraint firstItem="PcU-Kf-5U0" firstAttribute="leading" secondItem="09C-tB-3aU" secondAttribute="leading" constant="50" id="JYw-d7-EGC"/>
+                            <constraint firstItem="PcU-Kf-5U0" firstAttribute="top" secondItem="09C-tB-3aU" secondAttribute="top" constant="30" id="OFA-bC-MyT"/>
+                            <constraint firstItem="09C-tB-3aU" firstAttribute="trailing" secondItem="PcU-Kf-5U0" secondAttribute="trailing" constant="50" id="YX3-Ph-vEj"/>
+                            <constraint firstItem="09C-tB-3aU" firstAttribute="bottom" secondItem="PcU-Kf-5U0" secondAttribute="bottom" constant="50" id="vlv-Gg-tZh"/>
+                        </constraints>
                         <viewLayoutGuide key="safeArea" id="09C-tB-3aU"/>
                     </view>
-                    <tabBarItem key="tabBarItem" title="AUTO" id="n7S-fd-ZU9"/>
+                    <tabBarItem key="tabBarItem" title="AUTO" image="AutoNormal" id="n7S-fd-ZU9"/>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="t3Q-Va-0W1" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="3585" y="-426"/>
+            <point key="canvasLocation" x="3584" y="-426.38680659670166"/>
         </scene>
         <!--Tenso Mode View Controller-->
         <scene sceneID="tVh-nC-lOb">
             <objects>
                 <tabBarController id="RmC-vg-acE" customClass="TensoModeViewController" customModule="Tenso_MessagesExtension" customModuleProvider="target" sceneMemberID="viewController">
-                    <tabBar key="tabBar" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" id="YGd-Q0-4FA">
+                    <tabBar key="tabBar" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" barStyle="black" id="YGd-Q0-4FA">
                         <rect key="frame" x="0.0" y="0.0" width="375" height="49"/>
                         <autoresizingMask key="autoresizingMask"/>
                         <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                        <color key="barTintColor" cocoaTouchSystemColor="darkTextColor"/>
                     </tabBar>
                     <connections>
                         <segue destination="RXp-TD-UK3" kind="relationship" relationship="viewControllers" id="mkA-sw-kVm"/>
                         <segue destination="Z6V-TW-xhG" kind="relationship" relationship="viewControllers" id="hVb-Nl-ZwF"/>
+                        <segue destination="klY-F0-Cye" kind="showDetail" identifier="HideTensoModeController" id="xzs-gN-zff"/>
                     </connections>
                 </tabBarController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="iY0-Lb-hHK" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="1290" y="127"/>
+            <point key="canvasLocation" x="1562" y="59"/>
         </scene>
     </scenes>
+    <resources>
+        <image name="AutoNormal" width="22" height="22"/>
+        <image name="FacesNormal" width="22" height="22"/>
+    </resources>
+    <inferredMetricsTieBreakers>
+        <segue reference="xzs-gN-zff"/>
+    </inferredMetricsTieBreakers>
 </document>
