--- a/Tenso MessagesExtension/Base.lproj/MainInterface.storyboard
+++ b/Tenso MessagesExtension/Base.lproj/MainInterface.storyboard
@@ -20,12 +20,13 @@
                         <subviews>
                             <containerView opaque="NO" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="eAe-oc-qCe">
                                 <rect key="frame" x="0.0" y="20" width="320" height="508"/>
+                                <color key="backgroundColor" red="0.0" green="0.46274509800000002" blue="1" alpha="1" colorSpace="calibratedRGB"/>
                                 <connections>
-                                    <segue destination="klY-F0-Cye" kind="embed" id="nxM-5K-u0U"/>
+                                    <segue destination="SD4-qf-INR" kind="embed" id="Q1f-1M-Cyj"/>
                                 </connections>
                             </containerView>
                         </subviews>
-                        <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                        <color key="backgroundColor" red="0.98823529409999999" green="0.36078431370000003" blue="0.0039215686269999999" alpha="1" colorSpace="calibratedRGB"/>
                         <constraints>
                             <constraint firstItem="eAe-oc-qCe" firstAttribute="top" secondItem="LDy-ih-0nr" secondAttribute="top" id="1nC-bh-EWY"/>
                             <constraint firstItem="eAe-oc-qCe" firstAttribute="leading" secondItem="LDy-ih-0nr" secondAttribute="leading" id="52A-4l-fPZ"/>
@@ -41,7 +42,7 @@
             </objects>
             <point key="canvasLocation" x="-302.39999999999998" y="102.54872563718142"/>
         </scene>
-        <!--Recent Photos View Controller-->
+        <!--Recent Photos-->
         <scene sceneID="NTW-dT-4WX">
             <objects>
                 <collectionViewController id="klY-F0-Cye" customClass="RecentPhotosViewController" customModule="Tenso_MessagesExtension" customModuleProvider="target" sceneMemberID="viewController">
@@ -84,13 +85,14 @@
                             <outlet property="delegate" destination="klY-F0-Cye" id="wzA-rp-DLA"/>
                         </connections>
                     </collectionView>
+                    <navigationItem key="navigationItem" title="Recent Photos" id="SvH-V5-sb6"/>
                     <connections>
                         <segue destination="RmC-vg-acE" kind="show" identifier="ShowTensoModeController" id="w2d-EB-VBU"/>
                     </connections>
                 </collectionViewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="6bZ-K4-XxE" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="539" y="60"/>
+            <point key="canvasLocation" x="1330" y="76"/>
         </scene>
         <!--FaceTenso-->
         <scene sceneID="RBK-oU-JXw">
@@ -118,7 +120,7 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="3yj-2g-o0h" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="4179" y="-426"/>
+            <point key="canvasLocation" x="3584" y="487"/>
         </scene>
         <!--AutoTenso-->
         <scene sceneID="lpv-kQ-UJ3">
@@ -128,29 +130,29 @@
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" distribution="fillEqually" translatesAutoresizingMaskIntoConstraints="NO" id="PcU-Kf-5U0">
-                                <rect key="frame" x="50" y="50" width="275" height="518"/>
+                            <stackView opaque="NO" contentMode="scaleAspectFit" axis="vertical" distribution="fillEqually" translatesAutoresizingMaskIntoConstraints="NO" id="PcU-Kf-5U0">
+                                <rect key="frame" x="100" y="50" width="175" height="518"/>
                                 <subviews>
-                                    <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="oKg-Y2-QzJ">
-                                        <rect key="frame" x="0.0" y="0.0" width="275" height="172.5"/>
+                                    <imageView userInteractionEnabled="NO" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="oKg-Y2-QzJ">
+                                        <rect key="frame" x="0.0" y="0.0" width="175" height="172.5"/>
                                         <color key="backgroundColor" red="0.42745100000000003" green="0.78823500000000002" blue="0.82352899999999996" alpha="1" colorSpace="calibratedRGB"/>
                                     </imageView>
-                                    <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="pWL-Ve-mS7">
-                                        <rect key="frame" x="0.0" y="172.5" width="275" height="173"/>
+                                    <imageView userInteractionEnabled="NO" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="pWL-Ve-mS7">
+                                        <rect key="frame" x="0.0" y="172.5" width="175" height="173"/>
                                         <color key="backgroundColor" red="0.18823529410000001" green="0.70980392160000005" blue="0.41176470590000003" alpha="1" colorSpace="calibratedRGB"/>
                                     </imageView>
-                                    <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="mdD-AW-CPA">
-                                        <rect key="frame" x="0.0" y="345.5" width="275" height="172.5"/>
+                                    <imageView userInteractionEnabled="NO" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="mdD-AW-CPA">
+                                        <rect key="frame" x="0.0" y="345.5" width="175" height="172.5"/>
                                         <color key="backgroundColor" red="0.98823529409999999" green="0.36078431370000003" blue="0.0039215686269999999" alpha="1" colorSpace="calibratedRGB"/>
                                     </imageView>
                                 </subviews>
                             </stackView>
                         </subviews>
-                        <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                        <color key="backgroundColor" white="0.10000000000000001" alpha="1" colorSpace="calibratedWhite"/>
                         <constraints>
-                            <constraint firstItem="PcU-Kf-5U0" firstAttribute="leading" secondItem="09C-tB-3aU" secondAttribute="leading" constant="50" id="JYw-d7-EGC"/>
+                            <constraint firstItem="PcU-Kf-5U0" firstAttribute="leading" secondItem="09C-tB-3aU" secondAttribute="leading" constant="100" id="JYw-d7-EGC"/>
                             <constraint firstItem="PcU-Kf-5U0" firstAttribute="top" secondItem="09C-tB-3aU" secondAttribute="top" constant="30" id="OFA-bC-MyT"/>
-                            <constraint firstItem="09C-tB-3aU" firstAttribute="trailing" secondItem="PcU-Kf-5U0" secondAttribute="trailing" constant="50" id="YX3-Ph-vEj"/>
+                            <constraint firstItem="09C-tB-3aU" firstAttribute="trailing" secondItem="PcU-Kf-5U0" secondAttribute="trailing" constant="100" id="YX3-Ph-vEj"/>
                             <constraint firstItem="09C-tB-3aU" firstAttribute="bottom" secondItem="PcU-Kf-5U0" secondAttribute="bottom" constant="50" id="vlv-Gg-tZh"/>
                         </constraints>
                         <viewLayoutGuide key="safeArea" id="09C-tB-3aU"/>
@@ -162,12 +164,12 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="t3Q-Va-0W1" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="3584" y="-426.38680659670166"/>
+            <point key="canvasLocation" x="3584" y="-103"/>
         </scene>
         <!--Tenso Mode View Controller-->
         <scene sceneID="tVh-nC-lOb">
             <objects>
-                <tabBarController id="RmC-vg-acE" customClass="TensoModeViewController" customModule="Tenso_MessagesExtension" customModuleProvider="target" sceneMemberID="viewController">
+                <tabBarController modalTransitionStyle="flipHorizontal" modalPresentationStyle="overCurrentContext" id="RmC-vg-acE" customClass="TensoModeViewController" customModule="Tenso_MessagesExtension" customModuleProvider="target" sceneMemberID="viewController">
                     <tabBar key="tabBar" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" barStyle="black" id="YGd-Q0-4FA">
                         <rect key="frame" x="0.0" y="0.0" width="375" height="49"/>
                         <autoresizingMask key="autoresizingMask"/>
@@ -177,12 +179,31 @@
                     <connections>
                         <segue destination="RXp-TD-UK3" kind="relationship" relationship="viewControllers" id="mkA-sw-kVm"/>
                         <segue destination="Z6V-TW-xhG" kind="relationship" relationship="viewControllers" id="hVb-Nl-ZwF"/>
-                        <segue destination="klY-F0-Cye" kind="showDetail" identifier="HideTensoModeController" id="xzs-gN-zff"/>
+                        <segue destination="klY-F0-Cye" kind="show" identifier="HideTensoModeController" id="xzs-gN-zff"/>
                     </connections>
                 </tabBarController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="iY0-Lb-hHK" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="1562" y="59"/>
+            <point key="canvasLocation" x="2393" y="75"/>
+        </scene>
+        <!--Navigation Controller-->
+        <scene sceneID="1iO-jo-QuK">
+            <objects>
+                <navigationController modalTransitionStyle="crossDissolve" id="SD4-qf-INR" sceneMemberID="viewController">
+                    <navigationBar key="navigationBar" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" barStyle="black" id="A0G-AE-FZj">
+                        <rect key="frame" x="0.0" y="20" width="320" height="44"/>
+                        <autoresizingMask key="autoresizingMask"/>
+                    </navigationBar>
+                    <toolbar key="toolbar" opaque="NO" clearsContextBeforeDrawing="NO" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" id="fTQ-ev-Kfy">
+                        <autoresizingMask key="autoresizingMask"/>
+                    </toolbar>
+                    <connections>
+                        <segue destination="klY-F0-Cye" kind="relationship" relationship="rootViewController" id="zca-jj-uWS"/>
+                    </connections>
+                </navigationController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="T2X-hd-h53" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="473" y="75"/>
         </scene>
     </scenes>
     <resources>
